fix 0-byte logfile crash (fdo #28275)

Based on Robert McQueen's Empathy patch:
https://bugzilla.gnome.org/show_bug.cgi?id=619736