telepathy-logger/log-store-xml.c
@@ -947,20 +947,22 @@ _log_store_xml_search_in_files (TplLogStoreXml *self,
       gchar *filename;
       GMappedFile *file;
       gsize length;
-      gchar *contents;
-      gchar *contents_casefold;
+      gchar *contents = NULL;
+      gchar *contents_casefold = NULL;
 
       filename = l->data;
 
       file = g_mapped_file_new (filename, FALSE, NULL);
-      if (!file)
-        continue;
+      if (file == NULL)
+        goto fail;
 
       length = g_mapped_file_get_length (file);
       contents = g_mapped_file_get_contents (file);
-      contents_casefold = g_utf8_casefold (contents, length);
 
-      g_mapped_file_unref (file);
+      if (length == 0 || contents == NULL)
+        goto fail;
+
+      contents_casefold = g_utf8_casefold (contents, length);
 
       if (strstr (contents_casefold, text_casefold))
         {
@@ -974,6 +976,10 @@ _log_store_xml_search_in_files (TplLogStoreXml *self,
                   hit->filename, hit->date);
             }
         }
+
+fail:
+      if (file != NULL)
+        g_mapped_file_unref (file);
 
       g_free (contents_casefold);
       g_free (filename);
